--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
 @import "../bower_components/bourbon/dist/_bourbon.scss";
-@import '../bower_components/bitters/app/assets/stylesheets/base';
 @import '../bower_components/neat/app/assets/stylesheets/neat';
+@import 'base/base';
 
 button {
     @include button(shiny, #ff0000);
